--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>geoguesser</title>
-
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
-
+	<script type="text/javascript" src="libraries/p5.min.js"></script>
+    <script type="text/javascript" src="libraries/p5.dom.min.js"></script>
 </head>
 
 <body>
