--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>geoguesser</title>
-	<script type="text/javascript" src="libraries/p5.min.js"></script>
-    <script type="text/javascript" src="libraries/p5.dom.min.js"></script>
-</head>
+  <head>
+    <meta charset="utf-8" />
+    <title>geoguesser</title>
+    <script type="text/javascript" src="libraries/p5.min.js"></script>
+	<script type="text/javascript" src="libraries/p5.dom.min.js"></script>
+	<script type="text/javascript" src="libraries/seriously.js"></script>
+    <script type="text/javascript" src="libraries/seriously.chroma.js"></script>
+	<link rel="stylesheet" href="./styles.css">
+  </head>
 
-<body>
-	<script src="sketch.js"></script>
-</body>
-
+  <body>
+    <script src="sketch.js"></script>
+  </body>
+  <div id="container">
+    <canvas id="p5canvas" z-index="5" width="720" height="400" webgl></canvas>
+  </div>
 </html>
