added google maps map

--- a/index.html
+++ b/index.html
@@ -20,4 +20,5 @@
     <div id="pano"></div>
     <canvas id="p5canvas" z-index="5" width="720" height="400" webgl></canvas>
   </div>
+  <div id="map"></div>
 </html>
