--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="libraries/seriously.js"></script>
 	<script type="text/javascript" src="libraries/seriously.chroma.js"></script>
 	<script type="text/javascript" src="libraries/jquery-3.5.1.js"></script>
+	<script type="text/javascript" src="libraries/ml5.min.js"></script>
 	<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtCaCEBSsaWkmsIBhxgp5rb1n6lo7T6ac&libraries=&v=weekly"></script>
     <link rel="stylesheet" href="./styles.css" />
