added results div

--- a/index.html
+++ b/index.html
@@ -22,4 +22,5 @@
     <canvas id="p5canvas" z-index="5" width="720" height="400" webgl></canvas>
   </div>
   <div id="map"></div>
+  <div id="results"></div>
 </html>
