--- a/index.html
+++ b/index.html
@@ -1,48 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-	<title>geoguesser</title>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <script type="text/javascript" src="libraries/p5.min.js"></script>
-    <script type="text/javascript" src="libraries/p5.dom.min.js"></script>
-    <script type="text/javascript" src="libraries/seriously.js"></script>
-	<script type="text/javascript" src="libraries/seriously.chroma.js"></script>
-	<script type="text/javascript" src="libraries/jquery-3.5.1.js"></script>
-	<script type="text/javascript" src="libraries/ml5.min.js"></script>
-	<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtCaCEBSsaWkmsIBhxgp5rb1n6lo7T6ac&libraries=&v=weekly"></script>
-    <link rel="stylesheet" href="./styles.css" />
-  </head>
+    <head>
+        <meta charset="utf-8" />
+        <title>geoguesser</title>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+            crossorigin="anonymous"
+        ></script>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+            crossorigin="anonymous"
+        />
+        <script type="text/javascript" src="libraries/p5.min.js"></script>
+        <script type="text/javascript" src="libraries/p5.dom.min.js"></script>
+        <script type="text/javascript" src="libraries/seriously.js"></script>
+        <script
+            type="text/javascript"
+            src="libraries/seriously.chroma.js"
+        ></script>
+        <script type="text/javascript" src="libraries/jquery-3.5.1.js"></script>
+        <script type="text/javascript" src="libraries/ml5.min.js"></script>
+        <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtCaCEBSsaWkmsIBhxgp5rb1n6lo7T6ac&libraries=&v=weekly"></script>
+        <link rel="stylesheet" href="./styles.css" />
+        <script src="sketch.js"></script>
+    </head>
 
-  <body>
-    <script src="sketch.js"></script>
-  </body>
-  <div id="container">
-    <div id="pano"></div>
-    <canvas id="p5canvas" z-index="5" width="720" height="400" webgl></canvas>
-  </div>
-  <div id="map"></div>
-  <div id="results">
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-		<div class="modal-dialog modal-dialog-centered" role="document">
-		  <div class="modal-content">
-			<div class="modal-header">
-			  <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-			  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-				<span aria-hidden="true">&times;</span>
-			  </button>
-			</div>
-			<div class="modal-body">
-			  ...
-			</div>
-			<div class="modal-footer">
-			  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-			  <button type="button" class="btn btn-primary">Save changes</button>
-			</div>
-		  </div>
-		</div>
-	  </div>
-  </div>
+    <body>
+        <div class="w-100 h-100">
+            <div class="row h-50">
+                <div id="cnt">
+                    <div id="pano"></div>
+                    <canvas
+                        id="p5canvas"
+                        z-index="5"
+                        width="720"
+                        height="400"
+                        webgl
+                    ></canvas>
+                </div>
+            </div>
+            <div class="row h-50">
+                <div id="map"></div>
+            </div>
+        </div>
+    </body>
 </html>
