added restart function

--- a/index.html
+++ b/index.html
@@ -37,14 +37,41 @@
                     <canvas
                         id="p5canvas"
                         z-index="5"
-                        width="720"
-                        height="400"
+                        width="500"
+                        height="250"
                         webgl
                     ></canvas>
                 </div>
             </div>
             <div class="row h-50">
                 <div id="map"></div>
+            </div>
+        </div>
+        <!-- Modal -->
+        <div
+            class="modal fade"
+            id="myModal"
+            tabindex="-1"
+            role="dialog"
+            aria-labelledby="exampleModalLabel"
+            aria-hidden="true"
+        >
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">
+                            Your score:
+                        </h5>
+                    </div>
+                    <div class="modal-body text-center" id="score">
+
+					</div>
+                    <div class="modal-footer">
+                        <button id="restartGame" type="button" class="btn btn-primary">
+                            Try Again
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
