--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
             crossorigin="anonymous"
         />
+        <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+      />
         <script
             src="https://kit.fontawesome.com/4f9c54d899.js"
             crossorigin="anonymous"
@@ -43,7 +47,7 @@
     </head>
 
     <body>
-        <div class="container-fluid w-100 h-100 pa-0">
+        <div class="container-fluid w-100 h-100 p-0">
             <div class="row h-100">
                 <div class="col">
                     <div id="pano"></div>
@@ -98,87 +102,174 @@
                     </button>
                 </div>
             </div>
+            <div class="row">
+                <div class="col p-2 icons">
+                    <button
+                        id="btn-hint"
+                        type="button"
+                        class="btn btn-info btn-lg"
+                        data-toggle="tooltip"
+                        data-placement="left"
+                        title="Restart"
+                    >
+                        <i class="fa fa-refresh"></i>
+                    </button>
+                </div>
+            </div>
         </div>
 
-        <div class="container w-100 h-100 loading">
-            <div class="row">
+        <div class="container-fluid w-100 h-100 loading">
+            <div class="row h-100 align-items-center">
                 <div class="col"></div>
-                <div class="col"></div>
+                <div class="col text-center">
+                    <h4 id="funFact" class="text-white animate__animated"></h4>
+                    <hr>
+                    <hr>
+                    <div class="spinner-grow text-info m-1 " role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                    <div class="spinner-grow text-info m-1 " role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                    <div class="spinner-grow text-info m-1 " role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                    <div class="spinner-grow text-info m-1 " role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                    <div class="spinner-grow text-info m-1 " role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                    <div class="spinner-grow text-info m-1 " role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                    <div class="spinner-grow text-info m-1 " role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                    <div class="spinner-grow text-info m-1 " role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+
+                    
+                </div>
                 <div class="col"></div>
             </div>
         </div>
 
         <!-- Settings Modal -->
-        <div class="modal fade" id="settings-modal" tabindex="100" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div
+            class="modal fade"
+            id="settings-modal"
+            tabindex="100"
+            aria-labelledby="exampleModalLabel"
+            aria-hidden="true"
+        >
             <div class="modal-dialog modal-xl">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Nastavitve</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="container">
-                        <div class="row p-2">
-                            <div class="col">
-                                <div class="form-check form-switch">
-                                    <input
-                                        class="form-check-input"
-                                        type="checkbox"
-                                        id="cameraSwitch"
-                                        checked
-                                    />
-                                    <label
-                                        class="form-check-label"
-                                        for="cameraSwitch"
-                                        >Prikaži kamero</label
-                                    >
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">
+                            Settings
+                        </h5>
+                        <button
+                            type="button"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                            aria-label="Close"
+                        ></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="container">
+                            <div class="row p-2">
+                                <div class="col">
+                                    <div class="form-check form-switch">
+                                        <input
+                                            class="form-check-input"
+                                            type="checkbox"
+                                            id="cameraSwitch"
+                                            checked
+                                        />
+                                        <label
+                                            class="form-check-label"
+                                            for="cameraSwitch"
+                                            >Show camera</label
+                                        >
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row p-2">
-                            <div class="col">
-                                <div class="form-check form-switch">
-                                    <input
-                                        class="form-check-input"
-                                        type="checkbox"
-                                        id="cameraLabelsSwitch"
-                                        checked
-                                    />
-                                    <label
-                                        class="form-check-label"
-                                        for="cameraLabelsSwitch"
-                                        >Prikaži označbe na kameri</label
-                                    >
+                            <div class="row p-2">
+                                <div class="col">
+                                    <div class="form-check form-switch">
+                                        <input
+                                            class="form-check-input"
+                                            type="checkbox"
+                                            id="cameraLabelsSwitch"
+                                            checked
+                                        />
+                                        <label
+                                            class="form-check-label"
+                                            for="cameraLabelsSwitch"
+                                            >Show labels on camera</label
+                                        >
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row p-2">
-                            <div class="col">
-                                <select id="regionsSelect" class="form-select form-select-sm" aria-label=".form-select-lg example">
-                                    <option value="0" selected>Vse celine</option>
-                                  </select>
-                            </div>
-                            <div class="col">
-                                <select id="subregionsSelect" class="form-select form-select-sm" aria-label=".form-select-lg example">
-                                    <option value="0" selected>Vse podceline</option>
-                                  </select>
-                            </div>
-                            <div class="col">
-                                <select id="countriesSelect" class="form-select form-select-sm" aria-label=".form-select-lg example">
-                                    <option value="0" selected>Vse države</option>
-                                  </select>
+                            <div class="row p-2">
+                                <div class="col">
+                                    <select
+                                        id="regionsSelect"
+                                        class="form-select form-select-sm"
+                                        aria-label=".form-select-lg example"
+                                    >
+                                        <option value="0" selected>
+                                            All continents
+                                        </option>
+                                    </select>
+                                </div>
+                                <div class="col">
+                                    <select
+                                        id="subregionsSelect"
+                                        class="form-select form-select-sm"
+                                        aria-label=".form-select-lg example"
+                                    >
+                                        <option value="0" selected>
+                                            All subcontinents
+                                        </option>
+                                    </select>
+                                </div>
+                                <div class="col">
+                                    <select
+                                        id="countriesSelect"
+                                        class="form-select form-select-sm"
+                                        aria-label=".form-select-lg example"
+                                    >
+                                        <option value="0" selected>
+                                            All countries
+                                        </option>
+                                    </select>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    <div class="modal-footer">
+                        <button
+                            type="button"
+                            class="btn btn-secondary"
+                            data-bs-dismiss="modal"
+                        >
+                            Close
+                        </button>
+                        <button
+                            type="button"
+                            id="saveSettings"
+                            class="btn btn-primary"
+                            data-bs-dismiss="modal"
+                        >
+                            Save changes
+                        </button>
+                    </div>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Zapri</button>
-                    <button type="button" id="saveSettings" class="btn btn-primary" data-bs-dismiss="modal">Shrani spremembe</button>
-                </div>
-              </div>
             </div>
-          </div>
-        
+        </div>
 
         <div
             class="modal fade"
