added transiton on map hover and fixed some bugs

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     ></canvas>
                     <video class="input_video selfie" hidden></video>
                 </div>
-                <div class="col p-2" style="height: 200px">
+                <div class="col p-2 map-div">
                     <div id="map"></div>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                         data-toggle="modal"
                         data-target="#settings-modal"
                     >
-                        <i class="fa fa-sliders-h"></i>
+                        <i class="fa fa-sliders-h text-white"></i>
                     </button>
                 </div>
             </div>
@@ -117,7 +117,7 @@
                         data-placement="left"
                         title="Hint"
                     >
-                        <i class="fa fa-lightbulb"></i>
+                        <i class="fa fa-lightbulb text-white"></i>
                     </button>
                 </div>
             </div>
@@ -126,12 +126,12 @@
                     <button
                         id="btn-restart"
                         type="button"
-                        class="btn btn-info btn-lg"
+                        class="btn btn-warning btn-lg"
                         data-toggle="tooltip"
                         data-placement="left"
                         title="Restart"
                     >
-                        <i class="fa fa-refresh"></i>
+                        <i class="fa fa-refresh text-white"></i>
                     </button>
                 </div>
             </div>
@@ -299,7 +299,7 @@
         >
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
-                    <div class="modal-header">
+                    <div class="modal-header  text-center">
                         <h5 class="modal-title" id="exampleModalLabel">
                             Your score:
                         </h5>
