fixed #11: settings now save and game restarts only if region, subregion or country change

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         class="btn btn-warning btn-lg"
                         data-toggle="tooltip"
                         data-placement="left"
-                        title="Restart"
+                        title="New location"
                     >
                         <i class="fa fa-refresh text-white"></i>
                     </button>
