--- a/index.html
+++ b/index.html
@@ -141,30 +141,30 @@
                 <div class="col"></div>
                 <div class="col text-center">
                     <h4 id="funFact" class="text-white animate__animated"></h4>
-                    <hr>
-                    <hr>
-                    <div class="spinner-grow text-info m-1 " role="status">
+                    <hr />
+                    <hr />
+                    <div class="spinner-grow text-info m-1" role="status">
                         <span class="visually-hidden">Loading...</span>
                     </div>
-                    <div class="spinner-grow text-info m-1 " role="status">
+                    <div class="spinner-grow text-info m-1" role="status">
                         <span class="visually-hidden">Loading...</span>
                     </div>
-                    <div class="spinner-grow text-info m-1 " role="status">
+                    <div class="spinner-grow text-info m-1" role="status">
                         <span class="visually-hidden">Loading...</span>
                     </div>
-                    <div class="spinner-grow text-info m-1 " role="status">
+                    <div class="spinner-grow text-info m-1" role="status">
                         <span class="visually-hidden">Loading...</span>
                     </div>
-                    <div class="spinner-grow text-info m-1 " role="status">
+                    <div class="spinner-grow text-info m-1" role="status">
                         <span class="visually-hidden">Loading...</span>
                     </div>
-                    <div class="spinner-grow text-info m-1 " role="status">
+                    <div class="spinner-grow text-info m-1" role="status">
                         <span class="visually-hidden">Loading...</span>
                     </div>
-                    <div class="spinner-grow text-info m-1 " role="status">
+                    <div class="spinner-grow text-info m-1" role="status">
                         <span class="visually-hidden">Loading...</span>
                     </div>
-                    <div class="spinner-grow text-info m-1 " role="status">
+                    <div class="spinner-grow text-info m-1" role="status">
                         <span class="visually-hidden">Loading...</span>
                     </div>
                 </div>
@@ -290,23 +290,85 @@
 
         <div
             class="modal fade"
-            id="myModal"
+            id="score-modal"
             tabindex="-1"
             role="dialog"
             aria-labelledby="exampleModalLabel"
             aria-hidden="true"
         >
-            <div class="modal-dialog" role="document">
+            <div class="modal-dialog modal-xl" role="document">
                 <div class="modal-content">
-                    <div class="modal-header  text-center">
-                        <h5 class="modal-title" id="exampleModalLabel">
-                            Your score:
+                    <div class="modal-header text-center">
+                        <h5 class="modal-title w-100" id="exampleModalLabel">
+                            Good job! We hope you enjoyed and learned something
+                            new.
                         </h5>
                     </div>
-                    <div class="modal-body text-center" id="score"></div>
+                    <div class="modal-body">
+                        <div class="container-fluid w-100 h-100">
+                            <div class="row h-100 align-items-start">
+                                <div class="col h-100">
+                                    <div class="row p-2">
+                                        <div class="col">
+                                            <h6>We were in</h6>
+                                        </div>
+                                        <div class="col">
+                                            <h5 id="city"></h5>
+                                        </div>
+                                    </div>
+                                    <div class="row p-2">
+                                        <div class="col">
+                                            <h6>You were off by</h6>
+                                        </div>
+                                        <div class="col">
+                                            <h5 id="distance"></h5>
+                                        </div>
+                                    </div>
+                                    <div class="row p-2">
+                                        <div class="col">
+                                            <h6>You used</h6>
+                                        </div>
+                                        <div class="col">
+                                            <h5 id="hints"></h5>
+                                        </div>
+                                    </div>
+                                    <hr />
+                                    <div class="row p-2">
+                                        <div class="col">
+                                            <h6>You final score</h6>
+                                        </div>
+                                        <div class="col">
+                                            <h5 id="score"></h5>
+                                        </div>
+                                    </div>
+                                    <div class="row p-0">
+                                        <div class="col">
+                                            <div class="progress">
+                                                <div
+                                                id="score-progress-bar"
+                                                    class="progress-bar progress-bar-striped bg-warning"
+                                                    role="progressbar"
+                                                    style="width: 75%"
+                                                    aria-valuenow="75"
+                                                    aria-valuemin="0"
+                                                    aria-valuemax="100"
+                                                ></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div
+                                        id="score-map"
+                                        style="height: 400px"
+                                    ></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="modal-footer">
                         <button
-                            id="restartGame"
+                            id="restart-game"
                             type="button"
                             class="btn btn-primary"
                         >
