--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             src="https://cdn.jsdelivr.net/npm/@mediapipe/holistic/holistic.js"
             crossorigin="anonymous"
         ></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtCaCEBSsaWkmsIBhxgp5rb1n6lo7T6ac&libraries=&v=weekly"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=INSERT_API_KEY&libraries=&v=weekly"></script>
         <link rel="stylesheet" href="./styles.css" />
         <script src="sketch.js"></script>
         <script src="weatherconditions/Cloud.js"></script>
